tests/neg/tuple0.scala
// Could be desugared to Tuple0() instead of failing
val a: Tuple = () // error
